--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ header-img: img/home-bg.jpg
 email: huxpro@gmail.com
 description: "这里是 @Hux高槐玉 的个人博客，与你一起发现更大的世界 | 要做一个有 swag 的程序员"
 keyword: "高槐玉, 高槐玉, Hux, 鬼栈, huxpro, @huxpro, 高槐玉玄的博客, Hux Blog, 博客, 个人网站, 互联网, Web, JavaScript, React, React Native, 前端, 设计"
-url: "https://amosgao322.github.io" # your host, for absolute URL
-baseurl: "https://amosgao322.github.io" # for example, '/blog' if your blog hosted on 'host/blog'
+url: "https://amosgao322.github.io " # your host, for absolute URL
+baseurl: "" # for example, '/blog' if your blog hosted on 'host/blog'
 
 # Publish posts or collection documents with a future date.
 future: true
@@ -74,7 +74,7 @@ ga_domain: huangxuan.me
 
 # Sidebar settings
 sidebar: true # whether or not using Sidebar.
-sidebar-about-description: "gsdfas高槐玉  要做一个有 swag 的程序员 <br> React Team @ Meta"
+sidebar-about-description: "高槐玉  要做一个有 swag 的程序员 <br> React Team @ Meta"
 sidebar-avatar: https://github.com/Huxpro.png # use absolute URL, seeing it's used in both `/` and `/about/`
 
 # Featured Tags
