--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
-title: Hux Blog
-SEOTitle: 高槐玉的博客 | Hux Blog
+title: GHY Blog
+SEOTitle: 高槐玉的博客 | GHY Blog
 header-img: img/home-bg.jpg
-email: huxpro@gmail.com
+email: 2340989985@gmail.com
 description: "这里是 @Hux高槐玉 的个人博客，与你一起发现更大的世界 | 要做一个有 swag 的程序员"
-keyword: "高槐玉, 高槐玉, Hux, 鬼栈, huxpro, @huxpro, 高槐玉玄的博客, Hux Blog, 博客, 个人网站, 互联网, Web, JavaScript, React, React Native, 前端, 设计"
-url: "https://amosgao322.github.io/gaohuaiyu.github.io" # your host, for absolute URL
+keyword: "高槐玉, 高槐玉, Hux, 鬼栈, amosgao, @amosgao, 高槐玉玄的博客, Hux Blog, 博客, 个人网站, 互联网, Web, JavaScript, React, React Native, 前端, 设计"
+url: "https://amosgao322..io/gaohuaiyu.github.io" # your host, for absolute URL
 baseurl: "" # for example, '/blog' if your blog hosted on 'host/blog'
 
 # Publish posts or collection documents with a future date.
@@ -13,11 +13,11 @@ future: true
 
 # SNS settings
 RSS: false
-weibo_username: huxpro
-zhihu_username: huxpro
-github_username: huxpro
-twitter_username: huxpro
-#facebook_username:  huxpro
+weibo_username: GHYpro
+zhihu_username: GHYpro
+github_username: GHYpro
+twitter_username: GHYpro
+#facebook_username:  GHYpro
 #linkedin_username:  firstname-lastname-idxxxx
 
 # Build settings
@@ -59,7 +59,7 @@ kramdown:
       start_line: 1
 
 # Disqus settings
-disqus_username: hux
+disqus_username: GHY
 
 # Netease settings
 netease_comment: false
@@ -75,7 +75,7 @@ ga_domain: huangxuan.me
 # Sidebar settings
 sidebar: true # whether or not using Sidebar.
 sidebar-about-description: "高槐玉  要做一个有 swag 的程序员 <br> React Team @ Meta"
-sidebar-avatar: https://github.com/Huxpro.png # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: https://github.com/amosgao322.png # use absolute URL, seeing it's used in both `/` and `/about/`
 
 # Featured Tags
 featured-tags: true # whether or not using Feature-Tags
